# Code-Challenge

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  MIGRATION_GUIDE.md  Makefile  README.md  Update-Fixes.md  docker-compose.yml  main.py  mock_api_server.py  pyproject.toml  requirements.txt  test_file.py  utils.py
.github/workflows/: ci.yml
app/: __init__.py
app/api/: __init__.py  endpoints.py
app/core/: __init__.py  config.py
app/services/: animal_service.py  data_transformer.py  http_client.py
tests/: __init__.py  test_api.py  test_services.py
tests/etl/: test_etl_processing.py
tests/integration/: test_full_etl_workflow.py
tests/unit/: test_animal_endpoints.py  test_data_transformer.py  test_health_endpoint.py
